[package]
name = "apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.26.3"
libc = "0.2"

[features]

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["winuser"] }

# [lib]
# name = "foo"
# path = "src/lib.rs"
# crate-type = ["cdylib"]
